--- a/project1/docker-compose.yaml
+++ b/project1/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       dockerfile: Dockerfile.flask
     container_name: flask-app
     ports:
-      - "8080:80"
+      - "8080:80"  # localhost:8080 -> container:80
     environment:
       - DB_HOST=db
       - DB_PORT=5432
@@ -35,15 +35,15 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - .:/app
+      - ./app/data:/app/data
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: 256M
+          cpus: '1.0'
+          memory: 1024M
         reservations:
           cpus: '0.5'      
-          memory: 256M      
+          memory: 512M      
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
@@ -61,7 +61,7 @@ services:
       - webapp
     environment:
       - TARGET_URL=http://webapp
-      - STRESS_LEVEL=low
+      - STRESS_LEVEL=medium
       # low, medium, high, extreme, cpu-intensive, memory-intensive
     networks:
       - app-network
@@ -72,13 +72,13 @@ services:
       dockerfile: Dockerfile.monitor
     container_name: app-monitor
     ports:
-      - "8000:8000"
+      - "8001:8001"  # localhost:8001 -> container:8001
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./logs:/var/log
     environment:
       - CONTAINER_NAME=flask-app
-      - MONITOR_MODE=live
+      - MONITOR_MODE=live 
       - CPU_THRESHOLD="40"
       - MEMORY_THRESHOLD="50"
       - RESPONSE_TIME_THRESHOLD=1000
